# rust_finalproject_kbsearch

./: .gitignore  Cargo.toml  README.md  作业要求.md
.cargo/: config.toml
.trae/documents/: chinese-tokenizer-plan.md  local-knowledge-base-plan.md
src/: error.rs  indexer.rs  lib.rs  main.rs  parser.rs  scanner.rs  searcher.rs  storage.rs  tokenizer.rs
tests/: integration_test.rs
