[package]
name = "kbsearch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.11"
pdf-extract = "0.10"
docx-lite = "0.2"
thiserror = "2"
walkdir = "2"
dunce = "1"

[dev-dependencies]
tempfile = "3"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
